--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
  <nav>
 			 <ul>
-				 <li><a href="a">Home</a></li>
-				 <li><a href="b">About us</a></li>
-				 <li><a href="c">Contact us</a></li>
+				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Home</a></li>
+				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">About us</a></li>
+				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Contact us</a></li>
 			 </ul></nav>
 
 
