--- a/main.html
+++ b/main.html
@@ -9,10 +9,11 @@
 <body>
  <nav>
 			 <ul>
-				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Home</a></li>
-				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">About us</a></li>
-				 <li><a href="https://course.acciojob.com/open-web-editor?question=d8fe6489-7ea4-41a0-8713-9030d53ae460">Contact us</a></li>
-			 </ul></nav>
+				 <li><a href="https://www.google.com">Home</a></li>
+				 <li><a href="https://www.google.com">About us</a></li>
+				 <li><a href="https://www.google.com">Contact us</a></li>
+			 </ul>
+ </nav>
 
 
   <h3>3 random videos</h3>
