--- a/main.html
+++ b/main.html
@@ -7,19 +7,21 @@
 </head>
 
 <body>
- <nav>
-			 <ul>
-				 <li><a href="https://www.google.com">Home</a></li>
-				 <li><a href="https://www.google.com">About us</a></li>
-				 <li><a href="https://www.google.com">Contact us</a></li>
-			 </ul>
+ 
+<header>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+  </nav>
+</header>
 
-
-	 <h2>3 random videos</h2>
+<h2>3 Random Videos</h2>
 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
 <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
- </nav>
 
 
  
